--- a/src/Gui/fxml/Correlogram.fxml
+++ b/src/Gui/fxml/Correlogram.fxml
@@ -3,55 +3,63 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<VBox fx:id="correlogramView" prefHeight="326.9999000000025" prefWidth="1119.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.CorrelogramController">
-  <TabPane id="visualizationSwitcher" fx:id="visualizationSelector" maxHeight="27.0" minHeight="28.0" prefHeight="27.0" prefWidth="1119.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="20.0" VBox.vgrow="NEVER">
-    <Tab text="" />
-    <Tab text="" />
-    <Tab text="" />
-    <Tab text="" />
-    <Tab text="" />
-  </TabPane>
-  <StackPane fx:id="correlogramPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-background-color:white;*/" VBox.vgrow="ALWAYS" />
-  <StackPane fx:id="legendPane" maxHeight="280.0" maxWidth="1.7976931348623157E308" prefHeight="172.0" prefWidth="1119.0" style="/*-fx-background-color:blue;*/" VBox.vgrow="NEVER">
-    <Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="-20.0" StackPane.alignment="BOTTOM_LEFT">
-      <graphic>
-        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@../img/glyphicons_214_resize_small.png" />
-        </ImageView>
-      </graphic>
-      <tooltip>
-        <Tooltip text="Reset correlogram view" />
-      </tooltip>
-    </Button>
-    <ToggleButton fx:id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="-20.0" translateY="-20.0" StackPane.alignment="BOTTOM_LEFT">
-      <graphic>
-        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@../img/glyphicons_050_link.png" />
-        </ImageView>
-      </graphic>
-      <tooltip>
-        <Tooltip text="Link horizontal zoom and pan with time series view" />
-      </tooltip>
-    </ToggleButton>
-    <ToggleButton id="linkWithTimeSeriesViewToggle" fx:id="scatterPlotToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="false" text="" translateX="-20.0" translateY="-60.0" StackPane.alignment="BOTTOM_LEFT">
-      <graphic>
-        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@../img/glyphicons_185_screenshot.png" />
-        </ImageView>
-      </graphic>
-      <tooltip>
-        <Tooltip text="Show distribution of the correlation matrix values as scatterplot overlay." />
-      </tooltip>
-    </ToggleButton>
-    <ToggleButton id="linkWithTimeSeriesViewToggle" fx:id="columnUncertaintyToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" rotate="0.0" selected="false" text="" translateX="-20.0" translateY="-100.0" StackPane.alignment="BOTTOM_LEFT">
-      <graphic>
-        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" rotate="90.0" smooth="false">
-          <Image url="@../img/histogram.png" />
-        </ImageView>
-      </graphic>
-      <tooltip>
-        <Tooltip text="Toggle between uncertainty visualization methods color and column width." />
-      </tooltip>
-    </ToggleButton>
-  </StackPane>
-</VBox>
+<?import javafx.scene.text.Text?>
+<HBox id="HBox" alignment="CENTER" layoutX="-20.0" layoutY="0.0" prefHeight="326.9999000000025" prefWidth="1119.0" spacing="0.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.CorrelogramController">
+  <children>
+    <VBox id="VBox" alignment="CENTER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" spacing="5.0" style="&#10;" HBox.hgrow="NEVER">
+      <children>
+        <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation View" translateX="0.0" translateY="45.0" VBox.vgrow="NEVER" />
+        <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" VBox.vgrow="ALWAYS" />
+        <ToggleButton id="linkWithTimeSeriesViewToggle" fx:id="columnUncertaintyToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" rotate="0.0" selected="false" text="" translateX="0.0" translateY="0.0">
+          <graphic>
+            <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" rotate="90.0" smooth="false">
+              <Image url="@../img/histogram.png" />
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Toggle between uncertainty visualization methods color and column width." />
+          </tooltip>
+        </ToggleButton>
+        <ToggleButton id="linkWithTimeSeriesViewToggle" fx:id="scatterPlotToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="false" text="" translateX="0.0" translateY="0.0">
+          <graphic>
+            <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+              <Image url="@../img/glyphicons_185_screenshot.png" />
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Show distribution of the correlation matrix values as scatterplot overlay." />
+          </tooltip>
+        </ToggleButton>
+        <ToggleButton fx:id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="0.0" translateY="0.0">
+          <graphic>
+            <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+              <Image url="@../img/glyphicons_050_link.png" />
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Link horizontal zoom and pan with time series view" />
+          </tooltip>
+        </ToggleButton>
+        <Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="0.0">
+          <graphic>
+            <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+              <Image url="@../img/glyphicons_214_resize_small.png" />
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Reset correlogram view" />
+          </tooltip>
+        </Button>
+      </children>
+    </VBox>
+    <VBox fx:id="correlogramView" maxWidth="1.7976931348623157E308" minWidth="200.0" HBox.hgrow="ALWAYS">
+      <TabPane id="visualizationSwitcher" fx:id="visualizationSelector" maxHeight="27.0" minHeight="28.0" minWidth="300.0" prefHeight="27.0" prefWidth="1119.0" side="TOP" style="-fx-background-color: white;" styleClass="mainFxmlClass" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="20.0" VBox.vgrow="NEVER">
+        <Tab closable="false" text="" />
+        <Tab closable="false" text="" />
+        <Tab closable="false" text="" />
+        <Tab closable="false" text="" />
+        <Tab closable="false" text="" />
+      </TabPane>
+    </VBox>
+  </children>
+</HBox>
