--- a/src/Gui/fxml/MainWindow.fxml
+++ b/src/Gui/fxml/MainWindow.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="600.0" minWidth="800.0" prefHeight="768.0" prefWidth="1024.0" spacing="0.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.MainWindowController">
-  <HBox prefHeight="-1.0" prefWidth="-1.0">
-    <children>
-      <MenuButton mnemonicParsing="false" text="File">
+  <MenuBar>
+    <menus>
+      <Menu mnemonicParsing="false" text="File">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#showStartUpWizard" text="Create or Open Experiment..." />
           <MenuItem mnemonicParsing="false" onAction="#save" text="Save" />
@@ -16,16 +16,16 @@
           <SeparatorMenuItem mnemonicParsing="false" />
           <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit" />
         </items>
-      </MenuButton>
-      <MenuButton mnemonicParsing="false" text="Help">
+      </Menu>
+      <Menu mnemonicParsing="false" text="Help">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#showGitHubWiki" text="Wiki Pages" />
           <MenuItem mnemonicParsing="false" onAction="#showGitHubIssues" text="Report a bug (GitHub account required)" />
         </items>
-      </MenuButton>
-    </children>
-  </HBox>
-  <SplitPane dividerPositions="0.3395973154362416" focusTraversable="false" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" VBox.vgrow="ALWAYS">
+      </Menu>
+    </menus>
+  </MenuBar>
+  <SplitPane dividerPositions="0.33827493261455527" focusTraversable="false" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" VBox.vgrow="ALWAYS">
     <StackPane minHeight="0.0" prefHeight="132.0" prefWidth="1002.0" visible="true">
       <TabPane fx:id="inputTabPane" minHeight="0.0" prefHeight="165.0" prefWidth="200.0" rotateGraphic="false" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
         <Tab closable="false" text="Parameters">
